Added blank tile logic. Cleaned up some code. Remove redundant method in Board.